<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/activity_general_settings_toolbar"
        layout="@layout/activity_general_settings_custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scrl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_content_wrapper_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/security_settings_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="1dp"
                android:background="?attr/selectableItemBackground"
                android:padding="1dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/security_settings_image"
                        android:layout_width="35dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/general_settings_security_icon"
                        app:srcCompat="@drawable/outline_lock_black_18dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/general_settings_security"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="16dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_security_subheading_string"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/greyb0afad"
                            android:textSize="11dp" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/security_switch"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:theme="@style/CustomSwitchType1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/screenshot_prevention_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="1dp"
                android:background="?attr/selectableItemBackground"
                android:padding="1dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_screen_lock_portrait_black_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/general_settings_prevent_screenshot_label"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"

                            android:textSize="16dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/screenshot_prevent_subheading_string"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/greyb0afad"
                            android:textSize="8dp" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/screenshot_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:theme="@style/CustomSwitchType1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
